<resources>
    <string name="app_name">Timeless</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log">Bem vindo.</string>
    <string name="textoInicial">Esqueceu a palavra-passe?</string>
    <string name="senhaTextView">Palavra-Passe</string>
    <string name="usuarioTextView">E-mail</string>
    <string name="logDesc">Inicie a sessão para continuar.</string>
    <string name="regDesc">Prossiga com a criação da sua conta.</string>
    <string name="criarConta">Crie a sua conta.</string>
    <string name="txtForgot">Redefina a sua conta.</string>
    <string name="forgotDesc">Altere a senha da sua conta.</string>
    <string name="no_title">Início</string>
    <string name="no_title_profile">Perfil</string>
    <string name="title_activity_criar_conta">CriarContaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">Map</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="account_header">Conta</string>
    <string name="email_title">E-mail</string>
    <string name="name_title">Nome</string>
    <string name="about_title">Sobre</string>
    <string name="pass_title">Palavra-Passe</string>
</resources>